# subxt-playground

./: .gitignore  Cargo.toml  README.md
src/: main.rs
