[package]
name = "subxt-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.4.1"
parity-scale-codec = "3.6.9"
sp-core = "30.0.0"
subxt = "0.34.0"
subxt-signer = "0.34.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
